# plantilla-taller

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: publicar.yml
.github/workflows/: publicar.yml
about/: index.html
ayuda/ayuda/: index.html
ayuda/markdown/: index.html
ayuda/material/: index.html
instalacion/instalacion/: index.html
instalacion/linux/: index.html
instalacion/macos/: index.html
instalacion/windows/: index.html
search/: search_index.json
