[project]
name = "plantilla-taller"
version = "1.0.0"
description = "Esto es una plantilla de La Jaqueria para poder crear tu propio taller o recurso facilmente"
authors = [
    {name = "La Jaqueria", email = "lajaqueria@gmail.com"},
]
dependencies = [
    "mkdocs=1.5.3",
    "mkdocs-material=9.4.5",
    "mkdocs-minify-plugin=0.7.1",
    "mkdocs-glightbox=0.3.4",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
